--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,4 @@
-# Google Cloud y Gemini API Keys
-GEMINI_API_KEY=tu_api_key_de_gemini_aqui
-GOOGLE_APPLICATION_CREDENTIALS=./service-account-key.json
-
 # URLs para desarrollo
 REACT_APP_API_URL=http://localhost:8000
+
+# No se requieren API keys - usando librerías open source
